# zlotowa

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  initial_prompt.md  package-lock.json  package.json  task-board.md  vite.config.js
.claude/commands/: audit.md  createtask.md  docs.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gh-pages.yml  release.yml
audits/: 150226.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: backup.rs  classifiers.rs  db.rs  exporters.rs  ical.rs  lib.rs  llm.rs  models.rs  parsers.rs
crates/core/src/parsers/: csv_parser.rs  mod.rs
crates/core/tests/: integration.rs
docs/: book.toml
docs/src/: SUMMARY.md  cli.md  introduction.md
docs/src/features/: adding-expenses.md  budget-planning.md  bulk-import.md  categories.md  classification.md  dashboard.md  export.md  llm-config.md  managing-expenses.md  title-cleanup.md
docs/src/getting-started/: first-launch.md  installation.md
gh-pages/: budget.html  categories.html  dashboard.html  expenses.html  import.html  index-draft.html  index.html  settings.html  style.css
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: AddExpense.svelte  Autocomplete.svelte  BudgetPlanning.svelte  BulkUpload.svelte  Categories.svelte  ConfirmLeaveModal.svelte  ConfirmModal.svelte  Dashboard.svelte  DatePicker.svelte  EmptyState.svelte  ExpenseList.svelte  KeyboardShortcuts.svelte  Rules.svelte  Settings.svelte  Sidebar.svelte  Skeleton.svelte  StepIndicator.svelte  TitleCleanup.svelte  Toast.svelte  constants.js
src/lib/actions/: focusTrap.js
src/lib/budget/: BudgetCreator.svelte  BudgetEditor.svelte  BudgetOverview.svelte  CalendarEvents.svelte  MonthSelector.svelte
src/lib/rules/: RulesTable.svelte  (+2 more)
tasks/: 01-llm-providers.md  02-llm-pipeline-wiring.md  03-llm-frontend.md  04-csv-exporter.md  05-export-ui.md  06-cli.md  07-category-autocomplete.md  08-docs-alignment.md  09-llm-classification-hardening.md  10-click-to-assign-column-mapping.md  100-frontend-constants-cleanup.md  101-accessibility-suppressions.md  102-ci-cd-pipeline.md  103-bulk-upload-rule-review.md  104-e2e-playwright-tests.md  105-desktop-fullsize-layout.md  11-ux-polish.md  12-editable-rule-pattern.md  13-category-management.md  14-fix-csv-export-download.md  15-code-quality-cleanup.md  16-TBD.md  17-budget-planning.md  18-batch-undo.md  19-chip-input-category.md  20-expense-crud.md  21-title-cleanup-rules.md  22-pagination-search-filter.md  23-ui-polish-animations.md  24-DEMO_TBD.md  25-bulk-upload-ux.md  26-expense-list-cleanup.md  27-navigation-fix.md  28-title-cleanup-explanation.md  29-dashboard-widget-clicks.md  30-budget-planning-redesign.md  31-db-query-performance.md  32-mutex-across-llm-calls.md  33-accessibility-fixes.md  34-tauri-ipc-tests.md  (+65 more)
(+32 files in other folders)
