[package]
name = "accountant-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "accountant_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
accountant-core = { path = "../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"
