[package]
name = "accountant-app"
description = "Tauri IPC layer for złotówa desktop app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "accountant_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
accountant-core = { path = "../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
regex = "1"
tauri-plugin-log = "2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"
