[package]
name = "accountant-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "4ccountant"
path = "src/main.rs"

[dependencies]
accountant-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
comfy-table = "7"
colored = "2"
chrono = "0.4"
serde_json = "1"
