[package]
name = "accountant-cli"
description = "CLI companion for złotówa — bulk insert, backup, restore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "zlotowa"
path = "src/main.rs"

[dependencies]
accountant-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
comfy-table = "7"
colored = "2"
chrono = "0.4"
serde_json = "1"
