[package]
name = "accountant-core"
description = "Core business logic for złotówa — parsers, classifiers, DB, models"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
log = "0.4"
ical = "0.11"
